Fixed date logo visibility

--- a/src/components/css/Planner.css
+++ b/src/components/css/Planner.css
@@ -92,14 +92,30 @@ html,
   background-color: #45a049;
 }
 
-input[type="date"] {
-  color: black;
-}
-
 input[type="date"]::-webkit-calendar-picker-indicator {
-  filter: invert(0);
+  opacity: 0;
   cursor: pointer;
 }
+
+.date-input-container {
+  position: relative;
+  width: 100%;
+}
+
+.date-input-container input {
+  width: 100%;
+}
+
+.date-input-container .calendar-icon {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+  font-size: 20px;
+  color: #333; 
+}
+
 
 
 
